# PhytoEpi-LLaMA

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.codex/skills/remote-experiment-bridge/: SKILL.md
configs/: cpt_1b.yaml  ift_all_ie.yaml  inference_epop.yaml
data/: README.md
data/epop/: README.md  citation.bib  file_manifest.tsv  manifest.json
data/examples/: cpt_sample.jsonl  epop_inference_sample.jsonl  epop_prediction_sample.jsonl  example-1.json  ift_sample.jsonl
docs/: completeness_check.md  epop_dataset.md
scripts/: check_public_integrity.py
src/cpt/: build_mixed_corpus.py  evaluate_ppl.py  train_cpt_lora.py
src/data/: __init__.py  audit_ift_jsonl.py  build_inference_jsonl.py  convert_ie_pairs.py
src/eval/: __init__.py  evaluate_epop_relations.py
src/ift/: train_ift_lora.py
src/inference/: run_schema_extraction.py
src/phytoepi/: __init__.py  json_utils.py  prompt.py  schema.py
